'Make Duplicates Real' often makes a huge mess of transforms when Parent or Keep Hierarchy are set to True #51883

Closed
opened 2017-06-23 21:13:42 +02:00 by Tom Wilson · 9 comments

Blender Version
2.78c

Short description of error
The 'Make Duplicates Real' object operator has trouble assigning the correct matrix with complex dupli-groups when also applying the group's hierarchy.
I think it might be applying matrices in the wrong order (ie - scale before rotation)

Exact steps for others to reproduce the error
Please see blend file.
Select the dupli-group instance, Run 'Make Duplicates Real' and tick the Parent and Keep Hierarchy check boxes.

bug.blend

**Blender Version** 2.78c **Short description of error** The 'Make Duplicates Real' object operator has trouble assigning the correct matrix with complex dupli-groups when also applying the group's hierarchy. I think it might be applying matrices in the wrong order (ie - scale before rotation) **Exact steps for others to reproduce the error** Please see blend file. Select the dupli-group instance, Run 'Make Duplicates Real' and tick the Parent and Keep Hierarchy check boxes. [bug.blend](https://archive.blender.org/developer/F640319/bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @hedgehog90-3

Added subscriber: @hedgehog90-3

Added subscriber: @DuarteRamos

Added subscriber: @DuarteRamos

Could not recreate here under Windows 7 64 bots Blender 2.78, making duplicates real for both groups defined in the provided file worked as expected.

Nesting duplicated groups into a new group and making an instance of this new group, did however reveal broken swivel_chair_base objects after making it real.

I think it is caused by the Array modifier, and its use of an external object for offset. Either the empty is not being correctly referenced after making duplicates real, or it is wrongly applied.

Could not recreate here under Windows 7 64 bots Blender 2.78, making duplicates real for both groups defined in the provided file worked as expected. Nesting duplicated groups into a new group and making an instance of this new group, did however reveal broken `swivel_chair_base` objects after making it real. I think it is caused by the *Array* modifier, and its use of an external object for offset. Either the empty is not being correctly referenced after making duplicates real, or it is wrongly applied.
Author

No it has nothing to do with the modifers. Did you set remember to set use_base_parent=True, use_hierarchy=True?

Here's a simplifed version. Press ALT-P to run the code:
bug.blend

Here's what happens:

Pre:
blender_2017-06-24_11-26-03.png

Post:
blender_2017-06-24_11-25-55.png

No it has nothing to do with the modifers. Did you set remember to set use_base_parent=True, use_hierarchy=True? Here's a simplifed version. Press ALT-P to run the code: [bug.blend](https://archive.blender.org/developer/F641048/bug.blend) Here's what happens: Pre: ![blender_2017-06-24_11-26-03.png](https://archive.blender.org/developer/F641059/blender_2017-06-24_11-26-03.png) Post: ![blender_2017-06-24_11-25-55.png](https://archive.blender.org/developer/F641058/blender_2017-06-24_11-25-55.png)

Added subscriber: @matali23

Added subscriber: @matali23

Indeed, what a mess, I can confirm the bug.

Indeed, what a mess, I can confirm the bug.

This issue was referenced by 44397a7a0a

This issue was referenced by 44397a7a0a93f4e24865cef9276d09d0fe51880f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51883
No description provided.