Fix T51883: Wrong matrix computation in "Make Duplicates Real"